@@ -1,4 +1,6 @@
 ﻿Sigil v0.2.0 RC1 ADD_DATE
+    - added a new "Add Semantics" menu for XHTML documents; it can be used to mark XHTMLs as
+    "Dedication", "Colophon", "Glossary" etc. for the <guide> element of the OPF
     - the status bar now shows a message after chapter split operations
     - fixed an issue with filenames with characters that should not appear in valid XML IDs
     having those characters added anyway (issue #344)
